--- a/[NLP]_Lab_1.ipynb
+++ b/[NLP]_Lab_1.ipynb
@@ -1792,9 +1792,9 @@
         "- Additional preprocessing: n-gram, stopwords [ref](https://towardsdatascience.com/nlp-preprocessing-with-nltk-3c04ee00edc0)\n",
         "\n",
         "Will grade it only on and off. But briefly tell us what did you try.\n",
-        "-\n",
-        "-\n",
-        "-"
+        "- 한국어 data를 가져와서 사용했습니다. 텍스트 분석 후 비방내용이면 1 아니면 0으로 labeling이 되어있습니다.\n",
+        "- 한국어 data에 맞게 stop wrod를 소폭 적용했습니다\n",
+        "- 모델을 다양한모델을 적용후 성능이 그나마 잘 나온 LinearSVM을 사용했습니다."
       ]
     },
     {
